# PICO-ARM

./: .gitignore  README.md  config.toml
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: main.rs
host/: Cargo.toml  tmc-new-era-host
host/src/: main.rs
src/: main.rs
